--- a/.gitconfig
+++ b/.gitconfig
@@ -29,10 +29,10 @@
   local = yellow
   remote = green
 [color "diff"]
-  meta = yellow bold
+  meta = black bold
   frag = magenta bold
   old = red bold
-  new = green bold
+  new = blue bold
   whitespace = red reverse
 [color "status"]
   added = yellow
@@ -40,4 +40,5 @@
   untracked = cyan
 [core]
   whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
-
+[branch "master"]
+  rebase = true
