--- a/.gitconfig
+++ b/.gitconfig
@@ -4,9 +4,13 @@
   st = status
   a  = add
   d  = diff
+  dc = diff --cached
   co = checkout
   b  = branch
   l  = log
+  cp = cherry-pick
+  re = rebase
+  r  = reset
   lp = log --decorate --pretty=oneline --abbrev-commit
   lol = log --graph --decorate --pretty=oneline --abbrev-commit
   lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
@@ -16,7 +20,6 @@
   plr = pull --rebase
   ps = push
   ulc= reset --soft HEAD^
-  r  = reset
 [user]
   name = Timo Rößner
   email = timo.roessner@googlemail.com
