--- a/.gitconfig
+++ b/.gitconfig
@@ -9,8 +9,8 @@
   b  = branch
   l  = log
   cp = cherry-pick
-  re = rebase
-  r  = reset
+  rb = rebase
+  re = reset
   lp = log --decorate --pretty=oneline --abbrev-commit
   lol = log --graph --decorate --pretty=oneline --abbrev-commit
   lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
