--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,8 @@
   cp = cherry-pick
   rb = rebase
   re = reset
+  reh = reset --hard
+  res = reset --soft
   lp = log --decorate --pretty=oneline --abbrev-commit
   lol = log --graph --decorate --pretty=oneline --abbrev-commit
   lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
