--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,8 @@
   rb = rebase
   re = reset
   lp = log --patch --decorate --pretty=oneline --abbrev-commit
-  ls = log --stat --decorate --pretty=oneline --abbrev-commit
+  lst = log --stat --decorate --pretty=oneline --abbrev-commit
+  ls = log --decorate --pretty=oneline --abbrev-commit
   sh = show
   pl = pull
   plr = pull --rebase
