Add changelog git alias.

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
   lp = log --patch --decorate --pretty=oneline --abbrev-commit
   lst = log --stat --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   ll = log --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  changelog = log --pretty=format:'%Cred%h%Creset -%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --no-merges
   sh = show
   pl = pull
   plr = pull --rebase
